--- a/index.html
+++ b/index.html
@@ -75,9 +75,16 @@
 				<p>I did this project to demostrate the OOP way for such simple task in the case of Javascript (Typestript) and the custom structure (LinkedStack) implementation.
 					Implemented System tests. That&#39;s enough for demo.
 				UML would be nice but I don&#39;t have time for it right now so, maybe, later.</p>
+				<p><a href="https://velidan.github.io/rpn-calculator-cli/">Documentation</a></p>
 				<p><em>Requirements</em>: Node v12.</p>
 				<p><em>In general it should work on lowest version because Typescript handles everythign
 				but I didn&#39;t tested it on lowest version so feel free to check it.</em></p>
+				<a href="#attention" id="attention" style="color: inherit; text-decoration: none;">
+					<h3>Attention</h3>
+				</a>
+				<p><em>If you are Windows user so you can use prn-calculator-cli.exe</em>
+					in this case no dependencies needed.
+				It&#39;s located in the prn-calculator-cli-exe.zip archive</p>
 				<p>It supports 4 basic operations: +, -, /, *</p>
 				<p>How to install:</p>
 				<ul>
@@ -185,6 +192,9 @@
 						<a href="interfaces/configtype.html" class="tsd-kind-icon">Config<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-interface">
+						<a href="interfaces/operationinterface.html" class="tsd-kind-icon">Operation<wbr>Interface</a>
+					</li>
+					<li class=" tsd-kind-interface">
 						<a href="interfaces/registrytype.html" class="tsd-kind-icon">Registry<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-variable">
@@ -217,6 +227,10 @@
 				<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
 			</ul>
 			<ul class="tsd-legend">
+				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
+				<li class="tsd-kind-method tsd-parent-kind-interface"><span class="tsd-kind-icon">Method</span></li>
+			</ul>
+			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited method</span></li>
 			</ul>
@@ -227,9 +241,6 @@
 			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static method</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-protected"><span class="tsd-kind-icon">Protected method</span></li>
