--- a/classes/linkedstack.html
+++ b/classes/linkedstack.html
@@ -121,7 +121,7 @@
 					<div class="tsd-signature tsd-kind-icon">data<span class="tsd-signature-symbol">:</span> <a href="node.html" class="tsd-signature-type">Node</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> = []</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/LinkedStack.ts#L14">src/core/LinkedStack.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/LinkedStack.ts#L14">src/core/LinkedStack.ts:14</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -138,7 +138,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/LinkedStack.ts#L20">src/core/LinkedStack.ts:20</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/LinkedStack.ts#L20">src/core/LinkedStack.ts:20</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -161,7 +161,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/LinkedStack.ts#L37">src/core/LinkedStack.ts:37</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/LinkedStack.ts#L37">src/core/LinkedStack.ts:37</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -198,7 +198,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/LinkedStack.ts#L94">src/core/LinkedStack.ts:94</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/LinkedStack.ts#L94">src/core/LinkedStack.ts:94</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -230,7 +230,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/LinkedStack.ts#L117">src/core/LinkedStack.ts:117</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/LinkedStack.ts#L117">src/core/LinkedStack.ts:117</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -263,7 +263,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/LinkedStack.ts#L79">src/core/LinkedStack.ts:79</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/LinkedStack.ts#L79">src/core/LinkedStack.ts:79</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -313,7 +313,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/LinkedStack.ts#L70">src/core/LinkedStack.ts:70</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/LinkedStack.ts#L70">src/core/LinkedStack.ts:70</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="node.html" class="tsd-signature-type">Node</a></h4>
@@ -330,7 +330,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/LinkedStack.ts#L16">src/core/LinkedStack.ts:16</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/LinkedStack.ts#L16">src/core/LinkedStack.ts:16</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
@@ -347,7 +347,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/LinkedStack.ts#L107">src/core/LinkedStack.ts:107</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/LinkedStack.ts#L107">src/core/LinkedStack.ts:107</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -364,7 +364,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/LinkedStack.ts#L58">src/core/LinkedStack.ts:58</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/LinkedStack.ts#L58">src/core/LinkedStack.ts:58</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -477,6 +477,9 @@
 						<a href="../interfaces/configtype.html" class="tsd-kind-icon">Config<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-interface">
+						<a href="../interfaces/operationinterface.html" class="tsd-kind-icon">Operation<wbr>Interface</a>
+					</li>
+					<li class=" tsd-kind-interface">
 						<a href="../interfaces/registrytype.html" class="tsd-kind-icon">Registry<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-variable">
@@ -509,6 +512,10 @@
 				<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
 			</ul>
 			<ul class="tsd-legend">
+				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
+				<li class="tsd-kind-method tsd-parent-kind-interface"><span class="tsd-kind-icon">Method</span></li>
+			</ul>
+			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited method</span></li>
 			</ul>
@@ -519,9 +526,6 @@
 			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static method</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-protected"><span class="tsd-kind-icon">Protected method</span></li>
