--- a/classes/noargumenterror.html
+++ b/classes/noargumenterror.html
@@ -114,7 +114,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="rpnerror.html">RPNError</a>.<a href="rpnerror.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/errors/NoArgumentError.ts#L4">src/errors/NoArgumentError.ts:4</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/errors/NoArgumentError.ts#L4">src/errors/NoArgumentError.ts:4</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -169,7 +169,7 @@
 					<div class="tsd-signature tsd-kind-icon">msg<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;Please, enter some numbers before operation&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/errors/NoArgumentError.ts#L4">src/errors/NoArgumentError.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/errors/NoArgumentError.ts#L4">src/errors/NoArgumentError.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -258,6 +258,9 @@
 						<a href="../interfaces/configtype.html" class="tsd-kind-icon">Config<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-interface">
+						<a href="../interfaces/operationinterface.html" class="tsd-kind-icon">Operation<wbr>Interface</a>
+					</li>
+					<li class=" tsd-kind-interface">
 						<a href="../interfaces/registrytype.html" class="tsd-kind-icon">Registry<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-variable">
@@ -290,6 +293,10 @@
 				<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
 			</ul>
 			<ul class="tsd-legend">
+				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
+				<li class="tsd-kind-method tsd-parent-kind-interface"><span class="tsd-kind-icon">Method</span></li>
+			</ul>
+			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited method</span></li>
 			</ul>
@@ -300,9 +307,6 @@
 			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static method</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-protected"><span class="tsd-kind-icon">Protected method</span></li>
