--- a/classes/operationsregistry.html
+++ b/classes/operationsregistry.html
@@ -124,7 +124,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/operations/OperationRegistry.ts#L17">src/operations/OperationRegistry.ts:17</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/operations/OperationRegistry.ts#L17">src/operations/OperationRegistry.ts:17</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -146,7 +146,7 @@
 					<div class="tsd-signature tsd-kind-icon">registry<span class="tsd-signature-symbol">:</span> <a href="../interfaces/registrytype.html" class="tsd-signature-type">RegistryType</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/operations/OperationRegistry.ts#L17">src/operations/OperationRegistry.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/operations/OperationRegistry.ts#L17">src/operations/OperationRegistry.ts:17</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -163,7 +163,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/operations/OperationRegistry.ts#L31">src/operations/OperationRegistry.ts:31</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/operations/OperationRegistry.ts#L31">src/operations/OperationRegistry.ts:31</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -186,7 +186,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/operations/OperationRegistry.ts#L37">src/operations/OperationRegistry.ts:37</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/operations/OperationRegistry.ts#L37">src/operations/OperationRegistry.ts:37</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -281,6 +281,9 @@
 						<a href="../interfaces/configtype.html" class="tsd-kind-icon">Config<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-interface">
+						<a href="../interfaces/operationinterface.html" class="tsd-kind-icon">Operation<wbr>Interface</a>
+					</li>
+					<li class=" tsd-kind-interface">
 						<a href="../interfaces/registrytype.html" class="tsd-kind-icon">Registry<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-variable">
@@ -313,6 +316,10 @@
 				<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
 			</ul>
 			<ul class="tsd-legend">
+				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
+				<li class="tsd-kind-method tsd-parent-kind-interface"><span class="tsd-kind-icon">Method</span></li>
+			</ul>
+			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited method</span></li>
 			</ul>
@@ -323,9 +330,6 @@
 			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static method</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-protected"><span class="tsd-kind-icon">Protected method</span></li>
