--- a/classes/rpncalculator.html
+++ b/classes/rpncalculator.html
@@ -126,7 +126,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/RPNCalculator.ts#L17">src/core/RPNCalculator.ts:17</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/RPNCalculator.ts#L17">src/core/RPNCalculator.ts:17</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -148,7 +148,7 @@
 					<div class="tsd-signature tsd-kind-icon">linked<wbr>Stack<span class="tsd-signature-symbol">:</span> <a href="linkedstack.html" class="tsd-signature-type">LinkedStack</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/RPNCalculator.ts#L16">src/core/RPNCalculator.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/RPNCalculator.ts#L16">src/core/RPNCalculator.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -158,7 +158,7 @@
 					<div class="tsd-signature tsd-kind-icon">operations<wbr>Registry<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">OperationRegistry</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/RPNCalculator.ts#L17">src/core/RPNCalculator.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/RPNCalculator.ts#L17">src/core/RPNCalculator.ts:17</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -175,7 +175,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/RPNCalculator.ts#L39">src/core/RPNCalculator.ts:39</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/RPNCalculator.ts#L39">src/core/RPNCalculator.ts:39</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -199,7 +199,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/RPNCalculator.ts#L100">src/core/RPNCalculator.ts:100</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/RPNCalculator.ts#L100">src/core/RPNCalculator.ts:100</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">null</span><span class="tsd-signature-symbol"> | </span><a href="node.html" class="tsd-signature-type">Node</a></h4>
@@ -216,7 +216,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/RPNCalculator.ts#L109">src/core/RPNCalculator.ts:109</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/RPNCalculator.ts#L109">src/core/RPNCalculator.ts:109</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -247,7 +247,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/RPNCalculator.ts#L67">src/core/RPNCalculator.ts:67</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/RPNCalculator.ts#L67">src/core/RPNCalculator.ts:67</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -270,7 +270,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/RPNCalculator.ts#L79">src/core/RPNCalculator.ts:79</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/RPNCalculator.ts#L79">src/core/RPNCalculator.ts:79</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -296,7 +296,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/RPNCalculator.ts#L29">src/core/RPNCalculator.ts:29</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/RPNCalculator.ts#L29">src/core/RPNCalculator.ts:29</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -319,7 +319,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/RPNCalculator.ts#L63">src/core/RPNCalculator.ts:63</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/RPNCalculator.ts#L63">src/core/RPNCalculator.ts:63</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -336,7 +336,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/core/RPNCalculator.ts#L91">src/core/RPNCalculator.ts:91</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/RPNCalculator.ts#L91">src/core/RPNCalculator.ts:91</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -458,6 +458,9 @@
 						<a href="../interfaces/configtype.html" class="tsd-kind-icon">Config<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-interface">
+						<a href="../interfaces/operationinterface.html" class="tsd-kind-icon">Operation<wbr>Interface</a>
+					</li>
+					<li class=" tsd-kind-interface">
 						<a href="../interfaces/registrytype.html" class="tsd-kind-icon">Registry<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-variable">
@@ -490,6 +493,10 @@
 				<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
 			</ul>
 			<ul class="tsd-legend">
+				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
+				<li class="tsd-kind-method tsd-parent-kind-interface"><span class="tsd-kind-icon">Method</span></li>
+			</ul>
+			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited method</span></li>
 			</ul>
@@ -500,9 +507,6 @@
 			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static method</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-protected"><span class="tsd-kind-icon">Protected method</span></li>
