--- a/classes/substract.html
+++ b/classes/substract.html
@@ -79,6 +79,12 @@
 					</li>
 				</ul>
 			</section>
+			<section class="tsd-panel">
+				<h3>Implements</h3>
+				<ul class="tsd-hierarchy">
+					<li><a href="../interfaces/operationinterface.html" class="tsd-signature-type">OperationInterface</a></li>
+				</ul>
+			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
@@ -114,7 +120,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="operation.html">Operation</a>.<a href="operation.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/operations/Substract.ts#L3">src/operations/Substract.ts:3</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/operations/Substract.ts#L3">src/operations/Substract.ts:3</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -139,9 +145,10 @@
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
+								<p>Implementation of <a href="../interfaces/operationinterface.html">OperationInterface</a>.<a href="../interfaces/operationinterface.html#execute">execute</a></p>
 								<p>Overrides <a href="operation.html">Operation</a>.<a href="operation.html#execute">execute</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/operations/Substract.ts#L8">src/operations/Substract.ts:8</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/operations/Substract.ts#L8">src/operations/Substract.ts:8</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -166,9 +173,10 @@
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
+								<p>Implementation of <a href="../interfaces/operationinterface.html">OperationInterface</a>.<a href="../interfaces/operationinterface.html#getsymbol">getSymbol</a></p>
 								<p>Inherited from <a href="operation.html">Operation</a>.<a href="operation.html#getsymbol">getSymbol</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/operations/Operation.ts#L21">src/operations/Operation.ts:21</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/operations/Operation.ts#L22">src/operations/Operation.ts:22</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
@@ -186,7 +194,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="operation.html">Operation</a>.<a href="operation.html#validateparams">validateParams</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/operations/Operation.ts#L23">src/operations/Operation.ts:23</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/operations/Operation.ts#L24">src/operations/Operation.ts:24</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -213,7 +221,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="operation.html">Operation</a>.<a href="operation.html#isvalidoperation">isValidOperation</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/operations/Operation.ts#L8">src/operations/Operation.ts:8</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/operations/Operation.ts#L8">src/operations/Operation.ts:8</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -311,6 +319,9 @@
 						<a href="../interfaces/configtype.html" class="tsd-kind-icon">Config<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-interface">
+						<a href="../interfaces/operationinterface.html" class="tsd-kind-icon">Operation<wbr>Interface</a>
+					</li>
+					<li class=" tsd-kind-interface">
 						<a href="../interfaces/registrytype.html" class="tsd-kind-icon">Registry<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-variable">
@@ -343,6 +354,10 @@
 				<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
 			</ul>
 			<ul class="tsd-legend">
+				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
+				<li class="tsd-kind-method tsd-parent-kind-interface"><span class="tsd-kind-icon">Method</span></li>
+			</ul>
+			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited method</span></li>
 			</ul>
@@ -353,9 +368,6 @@
 			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static method</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-protected"><span class="tsd-kind-icon">Protected method</span></li>
