--- a/globals.html
+++ b/globals.html
@@ -97,6 +97,7 @@
 							<h3>Interfaces</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-interface"><a href="interfaces/configtype.html" class="tsd-kind-icon">Config<wbr>Type</a></li>
+								<li class="tsd-kind-interface"><a href="interfaces/operationinterface.html" class="tsd-kind-icon">Operation<wbr>Interface</a></li>
 								<li class="tsd-kind-interface"><a href="interfaces/registrytype.html" class="tsd-kind-icon">Registry<wbr>Type</a></li>
 							</ul>
 						</section>
@@ -131,7 +132,7 @@
 					<div class="tsd-signature tsd-kind-icon">gateway<span class="tsd-signature-symbol">:</span> <a href="classes/gateway.html" class="tsd-signature-type">Gateway</a><span class="tsd-signature-symbol"> = new Gateway(rl, rpnCalculator)</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/index.ts#L25">src/index.ts:25</a></li>
+							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/index.ts#L24">src/index.ts:24</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -141,7 +142,7 @@
 					<div class="tsd-signature tsd-kind-icon">rl<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Interface</span><span class="tsd-signature-symbol"> = readline.createInterface({input: process.stdin,output: process.stdout})</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/index.ts#L20">src/index.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/index.ts#L19">src/index.ts:19</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -151,7 +152,7 @@
 					<div class="tsd-signature tsd-kind-icon">rpn<wbr>Calculator<span class="tsd-signature-symbol">:</span> <a href="classes/rpncalculator.html" class="tsd-signature-type">RPNCalculator</a><span class="tsd-signature-symbol"> = new RPNCalculator(config)</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/index.ts#L18">src/index.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/index.ts#L17">src/index.ts:17</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -168,7 +169,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/utils/index.ts#L1">src/utils/index.ts:1</a></li>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/utils/index.ts#L1">src/utils/index.ts:1</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -190,7 +191,7 @@
 					<div class="tsd-signature tsd-kind-icon">config<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/index.ts#L8">src/index.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/index.ts#L7">src/index.ts:7</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
@@ -199,7 +200,7 @@
 						<div class="tsd-signature tsd-kind-icon">operations<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><a href="classes/sum.html" class="tsd-signature-type">Sum</a><span class="tsd-signature-symbol"> | </span><a href="classes/substract.html" class="tsd-signature-type">Substract</a><span class="tsd-signature-symbol"> | </span><a href="classes/mltiply.html" class="tsd-signature-type">Mltiply</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Sum</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> = [new Sum(),// just to show that we can redefine the operation symbolnew Substract(&#x27;-&#x27;),new Multiply(),new Divide()]</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dd53ab2/src/index.ts#L9">src/index.ts:9</a></li>
+								<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/index.ts#L8">src/index.ts:8</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -268,6 +269,9 @@
 						<a href="interfaces/configtype.html" class="tsd-kind-icon">Config<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-interface">
+						<a href="interfaces/operationinterface.html" class="tsd-kind-icon">Operation<wbr>Interface</a>
+					</li>
+					<li class=" tsd-kind-interface">
 						<a href="interfaces/registrytype.html" class="tsd-kind-icon">Registry<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-variable">
@@ -300,6 +304,10 @@
 				<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
 			</ul>
 			<ul class="tsd-legend">
+				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
+				<li class="tsd-kind-method tsd-parent-kind-interface"><span class="tsd-kind-icon">Method</span></li>
+			</ul>
+			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited method</span></li>
 			</ul>
@@ -310,9 +318,6 @@
 			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static method</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-protected"><span class="tsd-kind-icon">Protected method</span></li>
