--- a/interfaces/operationinterface.html
+++ b/interfaces/operationinterface.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ConfigType | prn-calculator-cli</title>
+	<title>OperationInterface | prn-calculator-cli</title>
 	<meta name="description" content="Documentation for prn-calculator-cli">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -56,10 +56,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="configtype.html">ConfigType</a>
+					<a href="operationinterface.html">OperationInterface</a>
 				</li>
 			</ul>
-			<h1>Interface ConfigType</h1>
+			<h1>Interface OperationInterface</h1>
 		</div>
 	</div>
 </header>
@@ -70,8 +70,18 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">ConfigType</span>
+						<span class="target">OperationInterface</span>
 					</li>
+				</ul>
+			</section>
+			<section class="tsd-panel">
+				<h3>Implemented by</h3>
+				<ul class="tsd-hierarchy">
+					<li><a href="../classes/mltiply.html" class="tsd-signature-type">Mltiply</a></li>
+					<li><a href="../classes/operation.html" class="tsd-signature-type">Operation</a></li>
+					<li><a href="../classes/substract.html" class="tsd-signature-type">Substract</a></li>
+					<li><a href="../classes/sum.html" class="tsd-signature-type">Sum</a></li>
+					<li><a href="../classes/sum.html" class="tsd-signature-type">Sum</a></li>
 				</ul>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
@@ -79,36 +89,59 @@
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
-							<h3>Properties</h3>
+							<h3>Methods</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="configtype.html#linkedstack" class="tsd-kind-icon">linked<wbr>Stack</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="configtype.html#operations" class="tsd-kind-icon">operations</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="operationinterface.html#execute" class="tsd-kind-icon">execute</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="operationinterface.html#getsymbol" class="tsd-kind-icon">get<wbr>Symbol</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="linkedstack" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> linked<wbr>Stack</h3>
-					<div class="tsd-signature tsd-kind-icon">linked<wbr>Stack<span class="tsd-signature-symbol">:</span> <a href="../classes/linkedstack.html" class="tsd-signature-type">LinkedStack</a></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/RPNCalculator.ts#L8">src/core/RPNCalculator.ts:8</a></li>
-						</ul>
-					</aside>
+				<h2>Methods</h2>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface">
+					<a name="execute" class="tsd-anchor"></a>
+					<h3>execute</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface">
+						<li class="tsd-signature tsd-kind-icon">execute<span class="tsd-signature-symbol">(</span>arg1<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, arg2<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/operations/OperationInterface.ts#L7">src/operations/OperationInterface.ts:7</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>arg1: <span class="tsd-signature-type">number</span></h5>
+								</li>
+								<li>
+									<h5>arg2: <span class="tsd-signature-type">number</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">number</span></h4>
+						</li>
+					</ul>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="operations" class="tsd-anchor"></a>
-					<h3>operations</h3>
-					<div class="tsd-signature tsd-kind-icon">operations<span class="tsd-signature-symbol">:</span> <a href="../classes/operation.html" class="tsd-signature-type">Operation</a><span class="tsd-signature-symbol">[]</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/core/RPNCalculator.ts#L7">src/core/RPNCalculator.ts:7</a></li>
-						</ul>
-					</aside>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface">
+					<a name="getsymbol" class="tsd-anchor"></a>
+					<h3>get<wbr>Symbol</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface">
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Symbol<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/velidan/rpn-calculator-cli/blob/dcb622f/src/operations/OperationInterface.ts#L8">src/operations/OperationInterface.ts:8</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
+						</li>
+					</ul>
 				</section>
 			</section>
 		</div>
@@ -170,24 +203,24 @@
 					<li class=" tsd-kind-class">
 						<a href="../classes/ungeristeredoperationerror.html" class="tsd-kind-icon">Ungeristered<wbr>Operation<wbr>Error</a>
 					</li>
+					<li class=" tsd-kind-interface">
+						<a href="configtype.html" class="tsd-kind-icon">Config<wbr>Type</a>
+					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface">
-						<a href="configtype.html" class="tsd-kind-icon">Config<wbr>Type</a>
+						<a href="operationinterface.html" class="tsd-kind-icon">Operation<wbr>Interface</a>
 						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="configtype.html#linkedstack" class="tsd-kind-icon">linked<wbr>Stack</a>
+							<li class=" tsd-kind-method tsd-parent-kind-interface">
+								<a href="operationinterface.html#execute" class="tsd-kind-icon">execute</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="configtype.html#operations" class="tsd-kind-icon">operations</a>
+							<li class=" tsd-kind-method tsd-parent-kind-interface">
+								<a href="operationinterface.html#getsymbol" class="tsd-kind-icon">get<wbr>Symbol</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-interface">
-						<a href="operationinterface.html" class="tsd-kind-icon">Operation<wbr>Interface</a>
-					</li>
 					<li class=" tsd-kind-interface">
 						<a href="registrytype.html" class="tsd-kind-icon">Registry<wbr>Type</a>
 					</li>
